# examen-dvc

./: .gitignore  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
src/data/: preprocess.py  split.py
src/models/: evaluate.py  gridsearch.py  train.py
