[project]
name = "examen-dvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.66.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "flake8>=7.3.0",
    "jupyter>=1.1.1",
    "sphinx>=9.1.0",
]
